--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ a {
 }
 header {
   width: 100%;
-  padding: 12px 0;
+  padding-bottom: 15px;
   border-bottom: 1px solid #b4b4b4;
   background-color: #fff;
   top: 0;
@@ -67,24 +67,25 @@ header nav div form {
   position: relative;
   right: 95px;
   bottom: 3px;
+  width: 50%;
 }
 header nav div form input {
   border: none;
   outline: none;
   background-color: transparent;
   font-size: 12px;
-  padding: 8px 45px 10px 10px;
+  padding: 10px;
+  width: 70%;
   letter-spacing: 0.5px;
 }
 header nav div div {
   position: relative;
   right: 85px;
 }
-header nav div div .fa-user-circle {
+header nav .user-circle {
   font-size: 26px;
   color: rgb(200, 200, 200);
   margin-right: 5px;
-
 }
 header nav div div button {
   border-radius: 15px;
@@ -94,7 +95,7 @@ header nav div div button {
   color: #fff;
   font-weight: 600;
   font-size: 15px;
-cursor: pointer;
+  cursor: pointer;
 }
 section {
   float: left;
@@ -102,24 +103,30 @@ section {
 }
 section.section-perfil {
   width: 25%;
-  margin-left: 100px;
+  margin-left: 200px;
   text-align: center;
 }
 section.section-perfil div.div-perfil {
   background-color: #fff;
 }
-
 .section-perfil div.empty {
-  background-color: rgb(120, 173, 255);
-  height: 130px;
+  background-image: url("../assets/imgs/photo.jpg");
+  background-repeat: no-repeat;
+  background-position:center;
+  background-size: cover;
+  height:250px;
 }
 .section-perfil div.user {
-  padding: 20px 0px;
-  font-size: 16px;
+  padding: 25px 0px;
   background-color: #fff;
 }
+.section-perfil div.user a {
+  color: black;
+  font-size: 18px;
+  font-weight: 600;
+}
 .section-perfil div a {
-  padding: 0px 9px 20px;
+  padding: 0px 9px 25px;
   font-size: 14px;
   color: #787878;
 }
@@ -129,14 +136,15 @@ section.section-perfil div.div-perfil {
   font-weight: 600;
 }
 section.section-tweets {
-  width: 55%;
+  width: 40%;
   margin-left: 30px;
   text-align: center;
   background-color: rgb(183, 223, 255);
   padding: 15px;
 }
 .section-tweets form {
-  padding: 8px;
+  padding: 5px;
+  width: 90%;
   background-color: #fff;
   border-radius: 10px;
   border: 1px solid rgb(183, 190, 255);
@@ -144,13 +152,21 @@ section.section-tweets {
 .section-tweets form input {
   border: none;
   background-color: transparent;
-  font-size: 12px;
-  padding: 8px 100px 10px 10px;
+  font-size: 15px;
+  padding: 5px;
   letter-spacing: 0.5px;
+  line-height: 20px;
+  width: 93%;
+  outline: none;
 }
-.section-tweets span .fa-user-circle {
-  color: rgb(60, 60, 60);
-  font-size: 30px;
+.section-tweets span.photo {
+  width: 7%;
+  position: relative;
+  top: 12px;
+}
+.section-tweets span img {
+  max-width: 100%;
+  border-radius: 100%;
 }
 
 /* clases para los eventos*/
